data/derived/comb/progs/unify/prog1850.ml.out
Characters 35-36:
  let f a x = a x + x a in
                      ^
Error: This expression has type ('a -> 'b) -> int
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a -> 'b) -> int
